add en section for innhold

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
             <li>Sanity and Headless CMS</li>
         </ul>
     </nav>
+    <section id="content">
+
+    </section>
 </body>
 </html>
