--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ressursarkivet</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <script src="ressurser.js"></script>
 </head>
 <body>
@@ -19,7 +19,6 @@
         </ul>
     </nav>
     <section id="content">
-
     </section>
 </body>
 </html>
