--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ressursarkivet</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <script src="ressurser.js"></script>
+    <script src="ressurser.js" ></script>
 </head>
 <body>
     <nav>
@@ -15,10 +15,12 @@
             <li>CSS</li>
             <li>JavaScript</li>
             <li>React</li>
-            <li>Sanity and Headless CMS</li>
+            <li>Sanity and headless CMS</li>
         </ul>
     </nav>
-    <section id="content">
-    </section>
+    <!--
+    <article class="content">
+    </article>
+    -->
 </body>
 </html>
